--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,416 +1,11 @@
 @import 'variables';
 @import 'zeroing';
 @import 'fonts';
-
-// ================================================== Header styles
-.header {
-  display: flex;
-  flex-direction: column;
-  width: 1920px;
-  height: 1024px;
-  border: 1px solid #000;
-  box-sizing: border-box;
-  background-image: url(../img/background-images/header-image.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #555556;
-  background-blend-mode: multiply;
-  // ================================================== Header-top
-  &__top {
-    // border: 1px solid #ff0000;
-    display: flex;
-    margin: 30px 0 0 0;
-    padding: 0 374px 0 376px;
-  }
-  &__logo {
-    @extend %font-first-regular;
-    // border: 1px solid #f6ff00;
-    box-sizing: border-box;
-    display: flex;
-    margin-top: 8px;
-  }
-  &__logo-text {
-    margin: 8px 0 15px -20px;
-    font-size: 34px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: -0.5px;
-    text-align: right;
-    color: $color-text-light-primary;
-  }
-  &__nav {
-    // border: 1px solid #1d00f9;
-    display: flex;
-    margin-left: 185px;
-    padding: 28px;
-    min-width: 699px;
-  }
-  &__list {
-    display: flex;
-    // border: 1px solid #000;
-    box-sizing: border-box;
-    width: 100%;
-    justify-content: space-between;
-  }
-  &__item {
-    // border: 1px solid #e90707;
-    display: flex;
-  }
-  &__item-link {
-    @extend %font-second-light;
-    object-fit: contain;
-    font-size: 14px;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: $color-text-light-primary;
-    // border: 1px solid #ffe600;
-    display: flex;
-  }
-  &__basket-button {
-    margin: 3px 22px 11px 31px;
-    background: none;
-  }
-  &__search-form {
-    padding: 23px 0 10px 0;
-    input[type='search'] {
-      width: 40px;
-      height: 40px;
-      outline: none;
-      background-image: url('../img/icons/search-icon.svg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      border: 1px solid gray;
-    }
-    input[type='search']:focus {
-      width: 300px;
-      transition: width 1s ease-out;
-      background-position: right;
-    }
-  }
-  // ================================================== Header-carousel
-  &__carousel {
-    // border: 1px solid #ff00bb;
-    width: 1920px;
-    min-height: 800px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 150px 0 150px;
-  }
-  &__carousel-textbox {
-    // border: 1px solid #000;
-    min-height: 200px;
-    width: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 256px 0 118px 0;
-    margin-bottom: 152px;
-    color: $color-text-light-primary;
-  }
-
-  // ==================================================== carousel-arrows
-  &__arrow_left {
-    box-sizing: border-box;
-    // border: 1px solid #9e0000;
-    height: 80px;
-    width: 45px;
-    margin-top: 352px;
-  }
-  &__arrow_right {
-    // border: 1px solid #0d01b9;
-    height: 80px;
-    width: 45px;
-    margin-top: 352px;
-  }
-
-  // ==================================================== carousel-text
-
-  &__subtitle {
-    // flex: 1 1;
-    // background: #000;
-    align-items: center;
-    @extend %font-first-medium;
-    font-size: 36px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-  }
-  &__title {
-    // flex: 1 1 905px;
-    // background: #ccc;
-    margin: 0 auto;
-    @extend %font-first-extrabold;
-    font-size: 52px;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    color: $color-text-light-primary;
-  }
-  &__text {
-    // flex: 1 1 905px;
-    // background: #827676;
-    margin: 0 auto;
-    @extend %font-second-light;
-    font-size: 16px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    text-align: center;
-  }
-  &__button {
-    width: 170px;
-    height: 53px;
-    margin: 0 auto;
-    background-color: $color-button-primary;
-    border-radius: 3px;
-    box-shadow: inset 0px -3px 0 0 $color-button-shadows;
-
-    @extend %font-first-extrabold;
-    color: $color-text-light-primary;
-    font-size: 14px;
-    font-weight: 800;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 52px;
-    letter-spacing: normal;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  &__button:hover {
-    background-color: $color-button-active;
-    color: $color-text-dark-primary;
-  }
-  &__button:active {
-    background-color: $color-button-shadows;
-    color: $color-text-light-primary;
-  }
-  &__button:visited {
-    color: #fff;
-  }
-
-  // ==================================================== Header__paggination
-  &__paggination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    // background-color: green;
-    min-height: 30px;
-    margin-top: 45px;
-    // border: 2px solid #ff0105;
-  }
-
-  &__paggination-item {
-    display: block;
-    width: 10px;
-    height: 10px;
-    margin: 0 5px;
-    border-radius: 50%;
-    background-color: gold;
-    &:hover {
-      background-color: transparent;
-      border: 2px solid gold;
-      transform: scale(1.2);
-    }
-  }
-}
-// ================================================== main block
-.main {
-  width: 1920px;
-}
-// ================================================== activities section
-.activities {
-  height: 373px;
-  // border: 1px solid aqua;
-  background-color: $color-icon-primary;
-  display: flex;
-  .container {
-    border: 1px solid #000;
-    margin: auto;
-    width: 1166px;
-    height: 215px;
-    display: flex;
-  }
-  &__item {
-    // border: 1px solid #e80606;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    img {
-      display: block;
-      // fill: green;
-      // margin: 0 0 20px 0;
-      // &:hover {
-      //   fill: gold;
-      // }
-    }
-    span {
-      @extend %font-first-semibold;
-      font-size: 22px;
-      font-weight: 600;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: center;
-      color: $color-text-dark-primary;
-    }
-    p {
-      @extend %font-second-light;
-      font-size: 14px;
-      font-weight: 300;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.71;
-      letter-spacing: normal;
-      text-align: center;
-      color: $color-text-dark-secondary;
-    }
-    &:after {
-      content: '';
-      display: block;
-      width: 70px;
-      height: 3px;
-      background-color: $color-line;
-    }
-    &:hover span {
-      color: $color-icon-active;
-    }
-    &:hover:after {
-      background-color: $color-icon-active;
-    }
-  }
-}
-// ================================================== screenshots section
-.screenshots {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 80px 344px 0 344px;
-  height: 700px;
-  border: 1px solid rgb(162, 0, 255);
-  background-color: $color-background-secondary;
-  &__text {
-    margin: 0 auto;
-    width: 760px;
-  }
-  .block-title {
-    display: block;
-    margin: 0 auto 14px;
-    @extend %font-first-semibold;
-    color: $color-text-dark-primary;
-    object-fit: contain;
-    font-size: 30px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-  }
-  .block-text {
-    @extend %font-second-light;
-    font-size: 16px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    letter-spacing: normal;
-    text-align: center;
-    color: $color-text-dark-secondary;
-  }
-  &__images {
-    width: 100%;
-    min-height: 485px;
-    background-image: url('/img/browser-center@3x.jpg'),
-      url('/img/browser-left@3x.jpg'), url('/img/browser-right@3x.jpg');
-
-    background-size: 62%, 62%, 62%;
-    background-repeat: no-repeat;
-    background-position: bottom center, bottom left, bottom right;
-  }
-}
-// ================================================== ad aside
-.ad {
-  height: 150px;
-  border: 1px solid rgb(0, 255, 4);
-  background-image: linear-gradient(to top, #211b19, #4e3427);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ad__wrapper {
-  margin: 0 470px 0 0;
-}
-
-.ad__title {
-  @extend %font-first-regular;
-  font-weight: 400;
-  width: 100%;
-  margin: 0;
-  font-size: 28px;
-  color: $color-text-light-primary;
-  line-height: 1.2;
-  text-align: left;
-}
-
-.ad__title span {
-  color: $color-text-light-secondary;
-}
-
-.ad__text {
-  @extend %font-second-light;
-  color: $color-text-light-quaternaly;
-  width: 100%;
-  margin: 0;
-  object-fit: contain;
-  font-size: 18px;
-  font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-}
-
-.ad__button {
-  width: 170px;
-  min-height: 50px;
-  border: none;
-  border-bottom: 2px solid $color-button-shadows;
-  border-radius: 3px;
-  background-color: $color-button-primary;
-  box-shadow: inset 0px -3px 0 0 $color-button-shadows;
-}
-.ad__button-text {
-  @extend %font-first-extrabold;
-  color: $color-text-light-primary;
-  object-fit: contain;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 800;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.64;
-  letter-spacing: normal;
-  text-align: center;
-}
+@import '_header';
+@import 'body-main';
+@import 'activities';
+@import 'screenshots';
+@import 'aside';
 
 // ================================================== our-latsest-projects
 .our-latsest-projects {
