--- a/scss/_screenshots.scss
+++ b/scss/_screenshots.scss
@@ -1,3 +1,7 @@
+@import 'variables';
+@import 'zeroing';
+@import 'fonts';
+@import 'mixins';
 // ================================================== screenshots section
 .screenshots {
   display: flex;
@@ -6,34 +10,19 @@
   height: 700px;
   border: 1px solid rgb(162, 0, 255);
   background-color: $color-background-secondary;
-  &__text {
+  &__textbox {
     margin: 0 auto;
     width: 760px;
-  }
-  .block-title {
-    display: block;
-    margin: 0 auto 14px;
-    @extend %font-first-semibold;
-    color: $color-text-dark-primary;
-    object-fit: contain;
-    font-size: 30px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-  }
-  .block-text {
-    @extend %font-second-light;
-    font-size: 16px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    letter-spacing: normal;
-    text-align: center;
-    color: $color-text-dark-secondary;
+    flex-wrap: wrap;
+    &-title {
+      @include block-title;
+      @extend %font-first-semibold;
+      width: 100%;
+    }
+    &-txt {
+      @include block-text;
+      @extend %font-second-light;
+    }
   }
   &__images {
     width: 100%;
